overflow correction nav

--- a/app/styles/nav.css
+++ b/app/styles/nav.css
@@ -48,7 +48,6 @@
     flex-direction: column;
     padding: 0.5rem;
     overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 .server-overview a {
@@ -72,7 +71,11 @@
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     padding-right: 0.5rem;
-    height: calc(var(--font-height) + (2 * var(--padding-height)));
+    height: calc(var(--font-height) + (2 * var(--padding-height)));   
+}
+
+.text-channel div {
+    max-width: 75%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -80,10 +83,12 @@
 
 .text-channel-icons {
     display: none;
+    width: fit-content;
 }
 
 .text-channel:hover .text-channel-icons {
     display: flex;
+    width: fit-content;
 }
 
 .title {
@@ -97,7 +102,6 @@
 .text-channel:hover {
     background-color: var(--color-dark-grey);
     border-radius: 7px;
-
 }
 
 .user{
